fix description truncate (#799)
* fix description truncate

* fix code styling

--- a/packages/cyberstorm/src/components/CollapsibleText/CollapsibleText.module.css
+++ b/packages/cyberstorm/src/components/CollapsibleText/CollapsibleText.module.css
@@ -1,23 +1,18 @@
 .root {
   display: block;
-  flex-grow: 0;
-  gap: var(--gap--4);
-  align-items: center;
-  width: auto;
-  width: 100%;
+}
+
+.text {
   overflow: hidden;
+  color: var(--color-text--secondary);
+  font-size: var(--font-size--l);
+  line-height: var(--line-height--l);
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-.text {
-  color: var(--color-text--secondary);
-  font-size: var(--font-size--l);
-  line-height: var(--line-height--l);
-}
-
 .opened {
-  text-wrap: wrap;
+  white-space: normal;
 }
 
 @media (max-width: 30rem) {
